static/stylesheets/main.css
/* ... */
p {
background-color: white;
color: #000000;
font-family: 'Red Hat Text', sans-serif;
font-size: 100%;
font-weight: 500;
text-align: center;
width: 60%;
margin: auto;
}

p.resume { 
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 100%;
  font-weight: 500;
  text-align: left;
  width: 60%;
  padding-top: 2%;
}

p.notes {
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 1.1em;
  font-weight: 300;
  text-align: left;
  padding-top: 5px;
  padding-bottom: 5px;
  width: 60%;
  margin: auto;
  }

p.projects { 
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 1.1em;
  font-weight: 300;
  text-align: center;
  padding-top: 5px;
  padding-bottom: 5px;
  width: 100%;
  margin: auto;
  }

p.large-table {
  font-size: 1em;
  }

ul {
  list-style-position: inside;
  padding-left: 5%;
  padding-right: 5%;
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  margin: auto;
}

ul.no-bullets {
  list-style-type: none; /* Remove bullets */
  padding: 0; /* Remove padding */
  margin: 0; /* Remove margins */
}

ul.resume {
  list-style-position: inside;
  padding-left: 5%;
  padding-right: 5%;
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 100%;
  padding-bottom: 5px;
  margin: auto;
  list-style-type: none;
}

ol {
  list-style-position: inside;
  padding-left: 5%;
  padding-right: 5%;
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  margin: auto;
}

li.header {
  padding-left: 5%;
  padding-right: 5%;
}

li.child {
  list-style-type: "-";
}

hr {
  width: 90%;
}

code-text {
    background-color: white;
    color: #000000;
    font-family: 'Red Hat Text', sans-serif;
    font-size: 100%;
    font-weight: 500;
    text-align: center;
    width: 60%;
    margin: auto;
}

code {
  color: #000000;
  background-color: #eee;
  border: 1px solid #999;
  display: block;
  width: 50%;
  margin: auto;
}
  
.container {
  display: flex;
  justify-content: center;
}

.child {
  margin: 0 auto;
}

.float-container {
padding: 10px;
width: 60%;
margin: auto;
}

.float-child-primary {
width: 80%;
float: right;
margin-top: 10px;
}  

.float-child-secondary {
width: 20%;
float: left;
margin-top: 10px;
}

.note-right-half {
  width: 50%;
  float: right;
  margin-top: 10px;
  }

.note-left-half {
  width: 50%;
  float: left;
  margin-top: 10px;
  } 

.float-resume-right {
  width: 67%;
  float: right;
  margin-top: 10px;
  }  

.float-resume-left {
  width: 33%;
  float: left;
  margin-top: 10px;
  }

.note-header {
  background-color: #f7f6f6;
  color: rgb(84, 84, 84);
  padding: 10px 20px 10px 20px;
  margin-bottom: 20px;
  }

.note-container {
  padding: 10px;
  width: 60%;
  margin: auto;
  }

.equation-container {
  padding: 10px;
  font-size: 100%;
  width: 60%;
  margin: auto;
  }
  

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.center-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 60%;
}

.center-image-small {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 7%;
}

.center-image-medium {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 15%;
}

.center-image-large {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 25%;
}

.center-image-xlarge {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 60%;
}

.two-column-table {
  border-collapse: collapse;
  text-align: center;
  width: 40%;
  margin: auto;
}

.code-table {
  border-collapse: collapse;
  text-align: center;
  width: 10%;
}

table td {
  border-left: 1px solid #000;
  border-right: 1px solid #000;
  text-align: center; 
  vertical-align: middle;
}

table.logic-gate {
  border-left: 1px solid #000;
  border-right: 1px solid #000;
  border-bottom: 1px solid #000;
  border-top: 1px solid #000;
  text-align: center; 
  vertical-align: middle;
  width: 12%;
  margin: auto;
}

table.resume-contact {
  border: 0px !important;
  border-collapse: collapse !important;
  border:none !important;
  outline:none !important;
  text-align: center;
  width: 40%;
  margin: auto;
}

th.resume-contact {
  border: 0px !important;
  border-collapse: collapse !important;
  border:none !important;
  outline:none !important;
  font-size: 1em;
}

td.resume-contact {
  border: 0px !important;
  border-collapse: collapse !important;
  border:none !important;
  outline:none !important;
  font-size: 1em;
}

table.small, th, td {
  border: 1px solid black;
  border-collapse: collapse;
  text-align: center;
  width: 10%;
  margin: auto;
}

table.medium {
  width: 15%; 
  margin: auto;
}

table.medium-large {
  width: 60%; 
  margin: auto;
}

table.large {
  width: 80%; 
  margin: auto;
}

table.extra-large {
  width: 95%; 
  margin: auto;
}

p.table {
  background-color: white;
  color: #000000;
  font-family: 'Red Hat Text', sans-serif;
  font-size: 100%;
  font-weight: 300;
  text-align: center;
  vertical-align: center;
  padding-top: 5px;
  padding-bottom: 5px;
  width: 60%;
  margin: auto;
  }

/* Style the header with a green background and some padding */
div.header {
display: inline-block;
overflow: hidden;
background-color: #1ADB7E;
padding: 20px 10px;
width: 100%;
}

/* Style the header links */
div.header a {
display: inline-flex;
padding: 5px;
color: black;
font-family: 'Red Hat Text', sans-serif;
font-size: 100%;
font-weight: 500;
line-height: 10%;
}

/* Change the background color on mouse-over */
div.header a:hover {
color: #FFFFFF;
}

/* Float the link section to the right */
div.header-right {
float: right;
}

footer {
width: 100%;
display: inline-block;
margin: 2em 0;
height: 70px;
background-color: #1ADB7E;
}
/* ... */

